update add airplane

--- a/Project/AMS/templates/a/addplane.html
+++ b/Project/AMS/templates/a/addplane.html
@@ -1,6 +1,7 @@
 {% extends "a/add.html"%}
 {% block content%}
 <div class="container-fluid" style="padding:0px">
+  {{airplanes}}
   <div class="row">
     <div class="col-lg-3"></div>
     <div class="col-lg">
