--- a/Project/AMS/templates/a/revenue.html
+++ b/Project/AMS/templates/a/revenue.html
@@ -1,4 +1,4 @@
-{%extends "dashboard.html"%}
+<!-- {%extends "dashboard.html"%}
 {%block tab%}
 <li class="nav-item">
     <a class="nav-link" id="history-tab" href="/a/flights" role="tab" aria-controls="history"
@@ -56,13 +56,13 @@
                 <h5 class="card-header">Top Destination</h5>
                 <div class="card-body">
                     <h4 class="card-title" style="color:#30aab8">Last Three Months</h4>
-                    {% for item in last_three_months%}
+                    {% for item in last_three_months_dest%}
                     <ul>
                         <li>{{item[0]}}</li>
                     </ul>
                     {% endfor %}
                     <h4 class="card-title" style="color:#30aab8">Last Year</h4>
-                    {% for item in last_year%}
+                    {% for item in last_year_dest%}
                     <ul>
                         <li>{{item[0]}}</li>
                     </ul>
@@ -72,4 +72,4 @@
         </div>
     </div>
 </div>
-{%endblock%}
+{%endblock%} -->
