--- a/Project/AMS/templates/a/topdest.html
+++ b/Project/AMS/templates/a/topdest.html
@@ -1,4 +1,4 @@
-{%extends "dashboard.html"%}
+<!-- {%extends "dashboard.html"%}
 {%block tab%}
 <li class="nav-item">
     <a class="nav-link" id="history-tab" href="/a/flights" role="tab" aria-controls="history"
@@ -61,4 +61,4 @@
     }
 </style>
 {%endblock%}
-    
+     -->
