update min price

--- a/Project/AMS/templates/a/addflights.html
+++ b/Project/AMS/templates/a/addflights.html
@@ -31,7 +31,7 @@
                         <div class="col">
                             <div class="form-group">
                                 <label for="bp">Base Price</label>
-                                <input class="form-control" type="number" id="bp" name="base_price" required>
+                                <input class="form-control" type="number" id="bp" name="base_price" min="0" required>
                             </div>
                         </div>
 
