--- a/Project/AMS/templates/a/addplane.html
+++ b/Project/AMS/templates/a/addplane.html
@@ -18,7 +18,7 @@
         <form action="#" method="POST" class="form" style="margin:0px !important; padding:10px;">
           <div class="form-group">
             <label class="mr-sm-2" for="seat">Number of Seats</label>
-            <input class="form-control mb-2 mr-sm-2" id="seat" type="number" name="seat" required>
+            <input class="form-control mb-2 mr-sm-2" id="seat" type="number" min="0" name="seat" required>
           </div>
           <input class="btn btn-success" type="submit" value="Submit">
         </form>
