delete unused file

--- a/Project/AMS/templates/a/reg_a.html
+++ b/Project/AMS/templates/a/reg_a.html
@@ -50,7 +50,7 @@
     <div class="form-group">
         <label for="phone">Phone Number</label>
         <input type="tel" id="phone" name="phone" required class="form-control">
-        <!-- <small id="phonehelp" class="form-text text-muted">Separate multiple phone numbers with comma</small> -->
+        <small id="phonehelp" class="form-text text-muted">One phone number only. Add more in profile page.</small>
     </div>
 </div>
 <br>
