--- a/Project/AMS/templates/c/reg_c.html
+++ b/Project/AMS/templates/c/reg_c.html
@@ -43,7 +43,7 @@
         <div class="form-group col-md-6">
             <label for="phone">Phone Number</label>
             <input type="tel" id="phone" name="phone" required class="form-control">
-            <!-- <small id="phonehelp" class="form-text text-muted">Separate multiple phone numbers with comma</small> -->
+            <small id="phonehelp" class="form-text text-muted">One phone number only. Add more in profile page.</small>
         </div>
     </div>
     <p class="text-muted">Address</p>
