--- a/Project/AMS/templates/a/addflights.html
+++ b/Project/AMS/templates/a/addflights.html
@@ -5,7 +5,8 @@
     <div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg">
-            <div class="card shadow p-3 mb-5 bg-white rounded" style="border-color:#30aab8; border-width: 1px;padding:25px !important;">
+            <div class="card shadow p-3 mb-5 bg-white rounded"
+                style="border-color:#30aab8; border-width: 1px;padding:25px !important;">
                 <h5 class="card-title" style="color:#30aab8">Add Flight for {{g.user[5]}}</h5><br>
                 {% with messages = get_flashed_messages() %}
                 {% if messages %}
@@ -70,7 +71,8 @@
                     <div class="form-group">
                         <label for="dt">Depart Time</label>
                         <div class="input-group mb-2 mr-sm-2" id="dt">
-                            <input class="form-control" id="dtpicker" type="text" name="dept_date" required placeholder="YYYY-MM-DD">
+                            <input class="form-control" id="dtpicker" type="text" name="dept_date" required
+                                placeholder="YYYY-MM-DD">
                             <input class="form-control" type="time" name="dept_time" required>
                             <script>
                                 $('#dtpicker').datepicker({
@@ -84,7 +86,8 @@
                     <div class="form-group">
                         <label for="at">Arrive Time</label>
                         <div class="input-group mb-2 mr-sm-2" id="at">
-                            <input class="form-control" id="atpicker" type="text" name="arrv_date" required placeholder="YYYY-MM-DD">
+                            <input class="form-control" id="atpicker" type="text" name="arrv_date" required
+                                placeholder="YYYY-MM-DD">
                             <input class="form-control" type="time" name="arrv_time" required>
                             <script>
                                 $('#atpicker').datepicker({
