--- a/Project/AMS/templates/a/confirm.html
+++ b/Project/AMS/templates/a/confirm.html
@@ -63,7 +63,7 @@
          <div class="row">
              <div class="col">
                  <div
-                     style="color: white; background-image: url('../../../static/journey.jpg'); background-size: 100%; font-size: 3vw; padding-left: 2vw;padding-bottom: 1vh">
+                     style="color: white; background-image: url({{url_for('static',filename='journey.jpg')}}); background-size: 100%; font-size: 3vw; padding-left: 2vw;padding-bottom: 1vh">
                      Operation Succeed<br><br></div>
              </div>
          </div>
