--- a/Project/AMS/templates/role_err.html
+++ b/Project/AMS/templates/role_err.html
@@ -94,7 +94,7 @@
         <div class="row">
             <div class="col">
                 <div
-                    style="color: white; background-image: url('../static/journey.jpg'); background-size: 100%; font-size: 3vw; padding-left: 2vw;padding-bottom: 1vh">
+                    style="color: white; background-image: url({{ url_for('static', filename='journey.jpg') }}); background-size: 100%; font-size: 3vw; padding-left: 2vw;padding-bottom: 1vh">
                     You are not authorized to view this page<br><br></div>
             </div>
         </div>
@@ -118,7 +118,7 @@
         <br>
         <!-- Footer -->
         <div class="flex-grow-1" id="footer-back"
-            style="background-image: url('../../../static/footer.jpg'); background-size: cover; background-repeat: 0; height: 35vh">
+            style="background-image: url({{ url_for('static', filename='footer.jpg') }}); background-size: cover; background-repeat: 0; height: 35vh">
             <footer class="fixed-bottom">
                 <div class="row">
                     <div class="col" style="text-align: center; color: white">
